   in the from parameter for outgoing SIP messages.

 * Added the PRESENCE_STATE function.  This allows retrieving presence state
   information from any presence state provider.  It also allows setting
   presence state information from a CustomPresence presence state provider.
   See AMI/CLI changes for related commands.


Channel Drivers
------------------

chan_local
------------------
 * Added a manager event "LocalBridge" for local channel call bridges between
   the two pseudo-channels created.


chan_dahdi
------------------
 * Added dialtone_detect option for analog ports to disconnect incoming
   calls when dialtone is detected.

 * Added option colp_send to send ISDN connected line information.  Allowed
   settings are block, to not send any connected line information; connect, to
   send connected line information on initial connect; and update, to send
   information on any update during a call.  Default is update.

 * Add options namedcallgroup and namedpickupgroup to support installations
   where a higher number of groups (>64) is required.


chan_motif
------------------
 * A new channel driver named chan_motif has been added which provides support for
   Google Talk and Jingle in a single channel driver. This new channel driver includes
   support for both audio and video, RFC2833 DTMF, all codecs supported by Asterisk,
   hold, unhold, and ringing notification. It is also compliant with the current Jingle
   specification, current Google Jingle specification, and the original Google Talk
   protocol.


chan_ooh323
------------------
 * Added NAT support for RTP.  Setting in config is 'nat', which can be set
   globally and overriden on a peer by peer basis.

 * Direct media functionality has been added. Options in config are:
   directmedia (directrtp) and directrtpsetup (earlydirect)

 * ChannelUpdate events now contain a CallRef header.


chan_sip
------------------
 * Asterisk will no longer substitute CID number for CID name in the display